# proc-macro-workshop

./: Cargo.toml
builder/: Cargo.toml
builder/src/: lib.rs
builder/tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  09-redefined-prelude-types.rs
debug/: Cargo.toml
debug/src/: lib.rs
debug/tests/: 01-parse.rs
seq/: Cargo.toml
seq/src/: lib.rs
seq/tests/: progress.rs
sorted/: Cargo.toml
sorted/src/: lib.rs
